2004-07-26  Jim Weirich  <jim@tardis>

	* lib/rubygems.rb (Gem::Exception::latest_load_paths): Added
	latest_load_paths and refactored all_load_paths to use common
	code.

2004-07-25  Jim Weirich  <jim@weirichhouse.org>

	* lib/rubygems.rb (Gem::Exception::all_load_paths): Added
	all_load_paths utility function.

	* bin/update_rubygems: Added a command to update the gem
	installation based on a update gem.

	* Rakefile: Pulled package file list out into a constant so it can
	be reused between the package command and the gem package command.
	Added a gem package target to support rubygems updates.

2004-07-22  Gavin Sinclair  <gsinclair@soyabean.com.au>

	* lib/rubygems/version.rb:
	  * (Requirement#initialize) initialize @version to avoid warning
	  * (Dependency#initialize) initialize @version_requirement to avoid
	    warning

2004-07-19  Chad Fowler     <chad@chadfowler.com>
        * install.rb: Shebang line should point to the ruby version used during
	installation.

2004-07-19  Assaph Mehr     <assaph@avaya.com>
	* lib/rubygems/command.rb, packages/sources/lib/sources.rb: Added
	command-line-configurable sources.

2004-07-18  Chad Fowler	    <chad@chadfowler.com>
	* lib/rubygems/validator.rb: Fixed a bug that would cause "managed"
	files to appear to be unmanaged due to differences in how the paths
	were formatted.

2004-07-17  Gavin Sinclair  <gsinclair@soyabean.com.au>

	* lib/rubygems/gem_commands.rb (InstallCommand#execute): removed clear
	  bug (name -> gem.name).

2004-07-14  Rich Kilmer     <rich@infoether.com>
	* added old_format.rb which is used in the (hack) in format.rb 
	  to detect the older version of a gem, and if present, switches 
	  to that class instead.
	* fixed the ARGV passing in bin/gem to ingore args past -- which
	  are used for passing params to source gems (extconf.rb)

2004-07-13  Chad Fowler	    <chad@chadfowler.com>
	* lib/rubygems/installer.rb, lib/rubygems/package.rb, 